include(${AMREX_HOME_DIR}/Tools/CMake/AMReXTargetHelpers.cmake)

add_executable(PeleRad_BoostPropertyTree.exe tstBoostPropertyTree.cpp ut_main.cpp)
target_include_directories(PeleRad_BoostPropertyTree.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base)
target_link_libraries(PeleRad_BoostPropertyTree.exe PRIVATE PeleRad Boost::unit_test_framework amrex)
target_compile_definitions(PeleRad_BoostPropertyTree.exe PRIVATE BOOST_TEST_DYN_LINK)
add_test(NAME PeleRad_BoostPropertyTree_Test COMMAND ./PeleRad_BoostPropertyTree.exe)

add_executable(PeleRad_BoostReadDatabase.exe tstBoostReadDatabase.cpp ut_main.cpp)
target_include_directories(PeleRad_BoostReadDatabase.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base)
target_link_libraries(PeleRad_BoostReadDatabase.exe PRIVATE PeleRad Boost::unit_test_framework amrex ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_IOSTREAMS_LIBRARY})
target_compile_definitions(PeleRad_BoostReadDatabase.exe PRIVATE BOOST_TEST_DYN_LINK DATABASE_PATH="${CMAKE_SOURCE_DIR}/data/kpDB/")
add_test(NAME PeleRad_BoostReadDatabase_Test COMMAND ./PeleRad_BoostReadDatabase.exe)

add_executable(PeleRad_AmrexGetRadProp.exe tstAmrexGetRadProp.cpp ut_main.cpp)
target_include_directories(PeleRad_AmrexGetRadProp.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base)
target_link_libraries(PeleRad_AmrexGetRadProp.exe PRIVATE PeleRad Boost::unit_test_framework amrex ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_IOSTREAMS_LIBRARY})
target_compile_definitions(PeleRad_AmrexGetRadProp.exe PRIVATE BOOST_TEST_DYN_LINK DATABASE_PATH="${CMAKE_SOURCE_DIR}/data/kpDB/")
add_test(NAME PeleRad_AmrexGetRadProp_Test COMMAND ./PeleRad_AmrexGetRadProp.exe)

add_executable(PeleRad_POne1D.exe tstPOne1D.cpp ut_main.cpp)
target_include_directories(PeleRad_POne1D.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base ${AMREX_HOME_DIR}/Src/LinearSolvers/MLMG)
target_link_libraries(PeleRad_POne1D.exe PRIVATE PeleRad Boost::unit_test_framework amrex)
target_compile_definitions(PeleRad_POne1D.exe PRIVATE BOOST_TEST_DYN_LINK)
add_test(NAME PeleRad_POne1D_Test COMMAND ./PeleRad_POne1D.exe "${CMAKE_SOURCE_DIR}/inputs/inputs.tstPOne1D" )

add_executable(PeleRad_POneSingle.exe tstPOneSingle.cpp ut_main.cpp)
target_include_directories(PeleRad_POneSingle.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base ${AMREX_HOME_DIR}/Src/LinearSolvers/MLMG)
target_link_libraries(PeleRad_POneSingle.exe PRIVATE PeleRad Boost::unit_test_framework amrex)
target_compile_definitions(PeleRad_POneSingle.exe PRIVATE BOOST_TEST_DYN_LINK)
add_test(NAME PeleRad_POneSingle_Test COMMAND ./PeleRad_POneSingle.exe "${CMAKE_SOURCE_DIR}/inputs/inputs.tstPOneSingle" )

add_executable(PeleRad_POneMulti.exe tstPOneMulti.cpp ut_main.cpp)
target_include_directories(PeleRad_POneMulti.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base ${AMREX_HOME_DIR}/Src/LinearSolvers/MLMG)
target_link_libraries(PeleRad_POneMulti.exe PRIVATE PeleRad Boost::unit_test_framework amrex)
target_compile_definitions(PeleRad_POneMulti.exe PRIVATE BOOST_TEST_DYN_LINK)
add_test(NAME PeleRad_POneMulti_Test COMMAND ./PeleRad_POneMulti.exe "${CMAKE_SOURCE_DIR}/inputs/inputs.tstPOneMulti" )

add_executable(PeleRad_POneSingleAF.exe tstPOneSingleAF.cpp ut_main.cpp)
target_include_directories(PeleRad_POneSingleAF.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base ${AMREX_HOME_DIR}/Src/LinearSolvers/MLMG)
target_link_libraries(PeleRad_POneSingleAF.exe PRIVATE PeleRad Boost::unit_test_framework amrex ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_IOSTREAMS_LIBRARY})
target_compile_definitions(PeleRad_POneSingleAF.exe PRIVATE BOOST_TEST_DYN_LINK DATABASE_PATH="${CMAKE_SOURCE_DIR}/data/kpDB/")
add_test(NAME PeleRad_POneSingleAF_Test COMMAND ./PeleRad_POneSingleAF.exe "${CMAKE_SOURCE_DIR}/inputs/inputs.tstPOneSingleAF" )

add_executable(PeleRad_POneMultiAF.exe tstPOneMultiAF.cpp ut_main.cpp)
target_include_directories(PeleRad_POneMultiAF.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base ${AMREX_HOME_DIR}/Src/LinearSolvers/MLMG)
target_link_libraries(PeleRad_POneMultiAF.exe PRIVATE PeleRad Boost::unit_test_framework amrex ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_IOSTREAMS_LIBRARY})
target_compile_definitions(PeleRad_POneMultiAF.exe PRIVATE BOOST_TEST_DYN_LINK DATABASE_PATH="${CMAKE_SOURCE_DIR}/data/kpDB/")
add_test(NAME PeleRad_POneMultiAF_Test COMMAND ./PeleRad_POneMultiAF.exe "${CMAKE_SOURCE_DIR}/inputs/inputs.tstPOneMultiAF" )

if(PELERAD_ENABLE_MPI)
add_executable(PeleRad_AmrexParallelFor.exe tstAmrexParallelFor.cpp ut_main.cpp)
target_include_directories(PeleRad_AmrexParallelFor.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base)
target_link_libraries(PeleRad_AmrexParallelFor.exe PRIVATE PeleRad Boost::unit_test_framework amrex MPI::MPI_CXX)
target_compile_definitions(PeleRad_AmrexParallelFor.exe PRIVATE BOOST_TEST_DYN_LINK)
add_test(NAME PeleRad_AmrexParallelFor_Test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} ./PeleRad_AmrexParallelFor.exe ${MPIEXEC_POSTFLAGS})
else()
add_executable(PeleRad_AmrexParallelFor.exe tstAmrexParallelFor.cpp ut_main.cpp)
target_include_directories(PeleRad_AmrexParallelFor.exe PUBLIC ${AMREX_HOME_DIR}/Src/Base)
target_link_libraries(PeleRad_AmrexParallelFor.exe PRIVATE PeleRad Boost::unit_test_framework amrex)
target_compile_definitions(PeleRad_AmrexParallelFor.exe PRIVATE BOOST_TEST_DYN_LINK)
add_test(NAME PeleRad_AmrexParallelFor_Test COMMAND ./PeleRad_AmrexParallelFor.exe)
endif()

if(PELERAD_ENABLE_CUDA)
setup_target_for_cuda_compilation(PeleRad_AmrexParallelFor.exe)
setup_target_for_cuda_compilation(PeleRad_BoostReadDatabase.exe)
setup_target_for_cuda_compilation(PeleRad_AmrexGetRadProp.exe)
setup_target_for_cuda_compilation(PeleRad_POne1D.exe)
setup_target_for_cuda_compilation(PeleRad_POneSingle.exe)
setup_target_for_cuda_compilation(PeleRad_POneMulti.exe)
setup_target_for_cuda_compilation(PeleRad_POneSingleAF.exe)
setup_target_for_cuda_compilation(PeleRad_POneMultiAF.exe)
endif()
